# libb2

./: .clang-format  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  Be.pro  CHANGES  CMakeLists.txt  LICENSE  Makefile  NOTES  NOTES.md  NOTICE  README.md  TODO  app.cpp  area.cpp  build.ninja  meson.build  port.cpp  sem.cpp  thread.cpp
bins/servicemanager/: CMakeLists.txt  binder.c  binder.h  service_manager.c
interfaces/: CMakeLists.txt
interfaces/app/: IApplication.idl  IApplicationManager.idl  ICommand.idl  IProgress.idl  ITerminalView.idl
interfaces/os/support/: IByteInput.aidl  IByteOutput.aidl  IByteSeekable.aidl  ICatalog.aidl  IContextManager.aidl  IDatum.aidl  IIterable.aidl  IIterator.aidl  INode.aidl  INodeObserver.aidl  IRandomIterator.aidl  SValue.aidl  Value.aidl
interfaces/package/: IInstallHandler.idl
interfaces/services/: IInformant.idl
interfaces/storage/: IReferable.idl
interfaces/support/: IByteStream.idl  ICatalog.idl  ICatalogPermissions.idl  IDatum.idl  IIterable.idl  IIterator.idl  IMemory.idl  INib.idl  INode.aidl  INode.idl  INodeObserver.idl  IProcess.idl  IProcessManager.idl  IRandomIterator.idl  ISelector.idl  ITable.idl  ITextStream.idl  IUuid.idl  IVirtualMachine.idl  Message.idl  MessageCodes.idl  Package.idl  StdIO.idl  URL.idl
kits/: CMakeLists.txt  be.map  root.map
kits/app/: AppMisc.cpp  Application.cpp  Clipboard.cpp  Cursor.cpp  Handler.cpp  InitTerminateLibBe.cpp  Invoker.cpp  LinkReceiver.cpp  LinkSender.cpp  Looper.cpp  Message.cpp  MessageAdapter.cpp  MessageQueue.cpp  MessageRunner.cpp  MessageUtils.cpp  Messenger.cpp  Roster.cpp  RosterPrivate.cpp  ServerLink.cpp  ServerMemoryAllocator.cpp
kits/base/: CMakeLists.txt  file.cpp  logging.cpp  logging_test.cpp
kits/binder/: AppOpsManager.cpp  Binder.cpp  BpBinder.cpp  CMakeLists.txt  IAppOpsService.cpp  IInterface.cpp  IMemory.cpp  IPCThreadState.cpp  IPermissionController.cpp  IServiceManager.cpp  MemoryDealer.cpp  MemoryHeapBase.cpp  Parcel.cpp  PersistableBundle.cpp  ProcessState.cpp  Status.cpp
kits/binder/tests/: CMakeLists.txt  binderDriverInterfaceTest.cpp  binderLibTest.cpp  binderThroughputTest.cpp
kits/interface/: Alignment.cpp  Bitmap.cpp  Box.cpp  Button.cpp  CheckBox.cpp  ColorConversion.cpp  Control.cpp  ControlLook.cpp  DosControlLook.cpp  DosControlLook.h  Font.cpp  GraphicsDefs.cpp  InterfaceDefs.cpp  Menu.cpp  MenuBar.cpp  MenuField.cpp  MenuItem.cpp  MenuWindow.cpp  Picture.cpp  Point.cpp  Polygon.cpp  PopUpMenu.cpp  RadioButton.cpp  Rect.cpp  Region.cpp  Screen.cpp  SeparatorItem.cpp  Slider.cpp  StringView.cpp  TabView.cpp  View.cpp  Window.cpp  theme.h
kits/kernel/: area.c  attr.c  debug.c  debug.cpp  image.c  info.c  monitor.c  port.c  private.h  rwlock.h  sem.c  syscalls.c  team.c  thread.c
kits/libcutils/: CMakeLists.txt  klog.c  log.c
kits/libcutils/tests/: CMakeLists.txt
kits/liblog/: CMakeLists.txt  logd_write_kern.c  logprint.c
kits/liblog/tests/: CMakeLists.txt  benchmark_main.cpp  liblog_benchmark.cpp
kits/libutils/: CMakeLists.txt  CallStack.cpp  Log.cpp  ProcessCallStack.cpp  RefBase.cpp  SharedBuffer.cpp  SharedBufferTest.cpp  Static.cpp  String.cpp  Timers.cpp  Tokenizer.cpp  VectorImpl.cpp
kits/libutils/tests/: BasicHashtable_test.cpp  CMakeLists.txt  Looper_test.cpp  LruCache_test.cpp  String_test.cpp
kits/private/: binder  find_directory.c  strlcat.c  strlcpy.c  syscalls.h
kits/private/app/: MessageAdapter.h  MessageUtils.h
kits/private/icon/: Icon.cpp  IconUtils.cpp
kits/storage/: AppFileInfo.cpp  Directory.cpp  Entry.cpp  EntryList.cpp  File.cpp  GenericNode.cpp  MetaDataNode.cpp  Mime.cpp  MimeType.cpp  Node.cpp  NodeInfo.cpp  NodeMonitor.cpp  Path.cpp  Resources.cpp  Statable.cpp  StreamDatum.cpp  ValueDatum.cpp  Volume.cpp
kits/support/: Archivable.cpp  Catalog.cpp  Context.cpp  DataIO.cpp  Flattenable.cpp  List.cpp  Locker.cpp  Node.cpp  String.cpp  Value.cpp  ValueInternal.h  ValueMap.cpp  ValueMap.h  ValueMapFormat.h  msgpack11.cpp
libbe/: meson.build
libbe/headers/: BeBuild.h  KernelKit.h
libbe/headers/kernel/: OS.h
libbe/headers/support/: SupportDefs.h
libraries/libbinder/: CMakeLists.txt  Makefile
libraries/libbinder/app/: BCommand.cpp  CMakeLists.txt  SGetOpts.cpp
libraries/libbinder/docs/: APIConventions.h  BinderShell.h  pidgen.h
libraries/libbinder/package/: CMakeLists.txt  ManifestParser.cpp  PackageKit.cpp  PackageManager.cpp
libraries/libbinder/services/: CMakeLists.txt  InformList.h  Informant.cpp
libraries/libbinder/storage/: BDatabaseStore.cpp  CMakeLists.txt  CatalogDelegate.cpp  DatumGeneratorInt.cpp  File.cpp  GenericDatum.cpp  GenericIterable.cpp  GenericNode.cpp  IndexedDataNode.cpp  IndexedIterable.cpp  (+8 more)
samples/SampleComponent/: CMakeLists.txt  SampleComponent.cpp  SampleComponent.h
samples/SampleService/: CMakeLists.txt  SampleService.cpp  SampleService.h  SampleService_components.cpp
servers/example/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  build.ninja  doctest.cpp  kits.cpp
tests/app/: CMakeLists.txt  app.cpp  app_pulse.cpp  message.cpp  message_runner.cpp
tests/binder/: CMakeLists.txt
tests/interface/: CMakeLists.txt  CheckBoxTest.cpp  ClippingPlusRedraw.cpp  MenuBeginningTest.cpp  MenuTriggerTest.cpp  PulseTest.cpp  boxes.cpp  button-test.cpp  hello.cpp  menu.cpp  minimal-app.cpp  radios.cpp  sliders.cpp  view-drawing.cpp  views.cpp  window-look-test.cpp  window-wmaction.cpp  window.cpp
tests/kernel/: CMakeLists.txt  area.cpp  debug.cpp  image.cpp  port.cpp  sem.cpp  team.cpp  thread.cpp
tests/storage/: CMakeLists.txt  attr.cpp  entry.cpp  info.cpp
tools/aidl/: CMakeLists.txt  aidl_language_l.ll  aidl_language_y.yy  type_cpp.cpp  type_namespace.cpp
tools/pidgen/: AST.cpp  AST.h  CMakeLists.txt  InterfaceRec.cpp  InterfaceRec.h  OutputCPP.cpp  OutputCPP.h  OutputI.cpp  OutputI.h  OutputUtil.cpp  OutputUtil.h  Schema.cpp  SearchPath.cpp  SearchPath.h  TypeBank.cpp  TypeBank.h  WSDL.cpp  WSDL.h  WsdlOutput.cpp  WsdlOutput.h  idlc.h  idlstruct.cpp  idlstruct.h  main.cpp  scanner.l  symbol.cpp  symbolstack.cpp  symbolstack.h  yacc.y
(+779 files in other folders)
