add_executable(hello hello.cpp)
target_link_libraries(hello be)

#add_executable(button-test button-test.cpp)
#target_link_libraries(button-test be)
#
#add_executable(menu menu.cpp)
#target_link_libraries(menu be)
#
#add_executable(view-drawing view-drawing.cpp)
#target_link_libraries(view-drawing be)
#
#add_executable(window-look-test window-look-test.cpp)
#target_link_libraries(window-look-test be)
#
#add_executable(window-wmaction window-wmaction.cpp)
#target_link_libraries(window-wmaction be)
